--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "start": "node ."
   },
   "keywords": [],
-  "author": "",
+  "author": "Ryo Komiyama",
   "license": "ISC",
+  "engines": {
+    "node": "12.x"
+  },
   "devDependencies": {
     "@types/node": "^12.12.54",
     "npm-run-all": "^4.1.5",
