LineBlockchainからtransactionを取得できるようにした

--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "@line/lbd-sdk-js": "^1.0.2",
+    "dayjs": "^1.10.6",
+    "dotenv": "^10.0.0"
   }
 }
